--- a/config.tmpl
+++ b/config.tmpl
@@ -9,6 +9,8 @@
   "fitbit": {
     "client_id": "",
     "api_secret": "",
+    "access_token": "",
+    "refresh_token": "",
     "callback": ""
   }
 }
