Add facebook client

--- a/config.tmpl
+++ b/config.tmpl
@@ -13,5 +13,9 @@
     "access_token": "",
     "refresh_token": "",
     "callback": ""
+  },
+  "facebook": {
+    "page_id": "",
+    "sender_id": ""
   }
 }
