Take in account break nokia api

--- a/config.tmpl
+++ b/config.tmpl
@@ -4,6 +4,8 @@
     "api_key": "",
     "api_token": "",
     "api_signature": "",
+    "nonce": "",
+    "timestamp": "",
     "callback": "",
     "user_id": ""
   },
