Nokia need refresh_token before each call

--- a/config.tmpl
+++ b/config.tmpl
@@ -1,13 +1,10 @@
 {
   "path_to_file": "",
   "nokia": {
-    "api_key": "",
-    "api_token": "",
-    "api_signature": "",
-    "nonce": "",
-    "timestamp": "",
-    "callback": "",
-    "user_id": ""
+    "access_token": "",
+    "refresh_token": "",
+    "client_id": "",
+    "client_secret": ""
   },
   "fitbit": {
     "client_id": "",
